# quori

./: README.md  SSH_KEY  SSH_KEY.pub
person_detection/: CMakeLists.txt  README.md  package.xml
person_detection/config/: person_detection.rviz
person_detection/launch/: person_detection_launch.py
person_detection/src/: cloud_detector.cpp  cloud_filter.cpp  detector.cpp  face_closest.cpp  laser_filter.cpp
ros2_teleop/: CMakeLists.txt  README.md  package.xml
ros2_teleop/launch/: ros2_teleop_launch.py
ros2_teleop/src/: ros2_teleop.cpp
