<?xml version="1.0"?>
<package format="3">
  <name>ros2_teleop</name>
  <version>0.1.0</version>
  <description>Quori Teleop Node for ROS 2</description>

  <maintainer email="jpgrunde@gmail.com">Jayden Grunde</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>